# triangler

./: .gitignore  Cargo.toml  commands.makefile  evaluator_builder.py  integrand_builder.py  integrator.py  makefile  plot_util.py  rust-toolchain.toml  symbolica_tests.ipynb  symbolica_vectors.py  thresh.ipynb  triangler  triangler_cli.py  wrapped_eval.py
evaluators/: ct.cpp  left.cpp  mid.cpp  right.cpp  sub.cpp  term.cpp
src/: integrands.rs  integrator.rs  lib.rs  logger.rs  parametrization.rs  python.rs  sampler.rs  traits.rs  util.rs  vectors.rs
src/basic/: integrands.rs  integrators.rs  mod.rs
src/complex/: integrands.rs  integrators.rs  mod.rs
src/implementations/: havana.rs  ltd.rs  mod.rs
src/real/: integrands.rs  integrators.rs
tests/: compare_basic.rs  compare_complex.rs  compare_real.rs  test_sample.rs
tests/common/: mod.rs
