[package]
name = "triangler"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "triangler"
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4.6"
pyo3 = { version = "0.26.0", features = ["extension-module", "num-complex"] }
rand = "0.9.2"
rayon = "1.11.0"
symbolica = { git = "https://github.com/benruijl/symbolica.git" }
threadpool = "1.8.1"