[package]
name = "triangler"
version = "0.1.2"
edition = "2021"

[lib]
name = "triangler"
crate-type = ["rlib", "cdylib"]

[features]
default = ["python"]
python = ["pyo3/extension-module", "pyo3/num-complex"]

[dependencies]
enum_dispatch = "0.3.13"
num-complex = "0.4.6"
rand = "0.9.2"
rayon = "1.11.0"
symbolica = { git = "https://github.com/benruijl/symbolica.git" }
pyo3 = { version = "0.27.0", features = ["num-complex", "extension-module"], optional = true }

[dev-dependencies]
olo_rust = { git = "https://github.com/SecretGmG/olo_rust.git" }

[package.metadata.maturin]
name = "triangler"