[package]
name = "triangler"
version = "0.1.2"
edition = "2021"

[lib]
name = "triangler"

[dependencies]
enum_dispatch = "0.3.13"
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"
symbolica = { git = "https://github.com/benruijl/symbolica.git" }

[dev-dependencies]
olo_rust = { git = "https://github.com/SecretGmG/olo_rust.git" }
